added service metaDon, some improved for render/ssr, types, index.ts

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <base href="/" />
     <script type="module" src="index.tsx"></script>
   </head>
-  <body>
+  <body data-attr="1" class="test example" id="9999">
     <div id="root"></div>
   </body>
 </html>
